# flocking_e-puck

./: README.md
examples/: CMakeLists.txt  collect_data.py  collision_runner.py  prev_results.csv  results.json  simulation_results.csv  simulation_runner.py
examples/src/controllers/: CMakeLists.txt
examples/src/controllers/epuck2_enemy/: CMakeLists.txt  robot_xaxis_controller.cpp  robot_xaxis_controller.h
examples/src/controllers/epuck2_flocking/: CMakeLists.txt  epuck2_flocking.cpp  epuck2_flocking.h
examples/src/experiments/: CMakeCache.txt  Makefile  cmake_install.cmake  config.json  epuck2_flocking.argos  temp_epuck2_flocking.argos
examples/src/experiments/controllers/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_battery/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_camera/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_encoders/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_flocking/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_ground/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_leds/: Makefile  cmake_install.cmake
examples/src/experiments/controllers/epuck2_sensors/: Makefile  cmake_install.cmake
examples/src/experiments/loop_functions/: Makefile  cmake_install.cmake
examples/src/loop_functions/: CMakeLists.txt
examples/src/loop_functions/flocking_loop_functions/: CMakeLists.txt  flocking_loop_functions.cpp  flocking_loop_functions.h
(+6 files in other folders)
